[package]
name = "rust_todo"
version = "0.1.0"
authors = ["Mikael Pettersson <mikael.pettersson@liu.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"

[dependencies.cursive]
version = "0.15"
default-features = false
features = ["crossterm-backend"]